--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -546,7 +546,9 @@ a:focus {
 }
 
 .contact_form-container {
-  background-image: url(../storage/images/banner.jpg);
+  background-image: url(../storage/images/img_2320.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .contact_form-container form {
@@ -558,9 +560,9 @@ a:focus {
 .contact_form-container .contact_box {
   background-color: #fff;
   padding: 35px 40px;
-  width: 50%;
-  height: 60%;
-  margin: 100px 50px;
+  width: 70%;
+  /*height: 60%;*/
+  margin: 50px auto;
 }
 
 .contact_form-container form input,
