--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10036,6 +10036,7 @@ a.text-dark:hover, a.text-dark:focus {
   }
 }
 /*# sourceMappingURL=bootstrap.css.map */
+
 body {
   font-family: "Open Sans", sans-serif;
   background-color: #fffcf4;
@@ -10349,17 +10350,17 @@ a:focus {
 
 .service_img-container .service_img-box.i-box-2 {
   width: 40%;
-  background-image: url(../storage/images/vanna.jpg);
+  background-image: url(../storage/images/vanna2.jpg);
 }
 
 .service_img-container .service_img-box.i-box-3 {
   width: 40%;
-  background-image: url(../storage/images/slider3/rub.jpg);
+  background-image: url(../storage/images/transportyori.jpg);
 }
 
 .service_img-container .service_img-box.i-box-4 {
   width: 60%;
-  background-image: url(../storage/images/golovorub.jpg);
+  background-image: url(../storage/images/telegi.jpg);
 }
 
 .service_section .service_img-container a,
@@ -10584,9 +10585,7 @@ a:focus {
 }
 
 .contact_form-container {
-  background-image: url(../storage/images/img_2320.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
+
 }
 
 .contact_form-container form {
@@ -10908,7 +10907,7 @@ a:focus {
 /* header */
 @font-face {
     font-family: "GOST type A";
-    src: url("../font/GOST_A.ttf") format("truetype");
+    src: url("../font/GOST_A.TTF") format("truetype");
     font-style: normal;
     font-weight: normal;
 }
@@ -10958,13 +10957,29 @@ a:focus {
     background: url(../storage/images/slider1/protvini.jpg) no-repeat 50% 1%/cover;
 }
 .slider-img2{
-    background: url(../storage/images/slider2/lopatka_modulnaya.jpg) no-repeat 50% 1%/cover;
+    background: url(../storage/images/slider2/lopatka_modulnaya2.jpg) no-repeat 50% 1%/cover;
 }
 .slider-img3{
-    background: url(../storage/images/slider3/gib.jpg) no-repeat 50% 1%/cover;
+    background: url(../storage/images/slider3/gib2.jpg) no-repeat 50% 1%/cover;
 }
 .slider-img4{
-    background: url(../storage/images/slider4/defrost.jpg) no-repeat 50% 1%/cover;
+    background: url(../storage/images/slider4/defrost2.jpg) no-repeat 50% 1%/cover;
+}
+
+.sl-container{
+    justify-content: center;
+    align-items: center;
+    min-height: 400px;
+}
+
+.sl-card{
+    max-width: 300px;
+    min-height: 300px;
+    margin: 5px 5px;
+
+}
+.sl-img-fluid{
+    max-width: 200px;
 }
 
 /* end First slider main page */
@@ -10989,6 +11004,20 @@ a:focus {
 }
 
 /* end contacts */
+
+/*Gallery*/
+.h_cat{
+    font-size: unset!important;
+}
+.rcenter{
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+.new_size{
+    min-width: 300px;
+}
+/*end Gallery*/
 
 /*form*/
 .is_invalid{
@@ -11031,7 +11060,7 @@ a:focus {
 @media (max-width: 837px) {
     .slider_section .slider_box .slider-detail .slider_detail-heading h1 {
         font-weight: 700;
-        font-size: 20px;
+        font-size: 16px;
         text-transform: uppercase;
     }
     .slider_section .slider_box .slider-detail {
@@ -11083,5 +11112,33 @@ a:focus {
     }
     .slider_section .slider_box .fixed_company-detail p{
         font-size: 15px;
+    }
+
+
+}
+
+@media(max-width: 740px) {
+    .slider_section .carousel-indicators{
+        top: 95%;
+        left: 25%;
+        display: flex;
+        justify-content: space-between;
+        width: 100px;
+        align-items: center;
+    }
+}
+@media(max-width: 390px) {
+    .logo_box img{
+        width: 80%;
+    }
+
+    .middle_header {
+        font-size: 10px;
+        margin-left: 80px;
+        margin-top: -20px;
+    }
+    .company_name {
+        font-size: 28px;
+        padding: unset;
     }
 }
